# nicos

./: .codespellrc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci-redis-artifact.yml  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  installed_modules.txt  kafka-init.sh  known_needed_fixes.md  pyproject.toml  pytest.ini  redis.conf  requirements-dev.txt  requirements-gui.txt  requirements.txt  requirements_py38.txt
nicos_demo/: __init__.py  pyproject.toml
nicos_demo/demo/: guiconfig-pibox.py  guiconfig.py
nicos_demo/demo/devices/: attenuator.py  cpuload.py  net.py  notifier.py  servo.py
nicos_demo/demo/gui/: sanspanel.py
nicos_demo/demo/setups/: ccr.py  cpu.py  cryo.py  detector.py  magnet.py  misc.py  net.py  sans.py  sc.py  sc1.py  sc2.py  servo.py  source.py  startup.py  sxtal.py  system.py  table.py  tas.py  vacuum.py
nicos_demo/mantid/: guiconfig.py
nicos_demo/mantid/devices/: devices.py  instrument.py
nicos_demo/mantid/gui/: instview.py
nicos_demo/mantid/setups/: not_viewable.py  pixels.py  system.py  tubes.py
nicos_demo/skeleton/: guiconfig.py
nicos_demo/skeleton/setups/: system.py
nicos_demo/vantares/: guiconfig.py
nicos_demo/vantares/setups/: alias_sry.py  antares_four.py  antares_s.py  basic.py  center3.py  collimator.py  detbox_l.py  detector_four.py  detector_ikonl.py  detector_ill.py  detector_neo.py  detector_parameters.py  detector_translation.py  detector_zwo01.py  filesavers.py  huber.py  lbl.py  light.py  reactor.py  sbl.py  shutters.py  system.py
nicos_demo/verwin/: guiconfig.py
nicos_demo/verwin/setups/: charmbig.py  charmsmall.py  startup.py  system.py
nicos_demo/vnectar/: guiconfig.py
nicos_demo/vnectar/setups/: detector.py  detector_ikonl.py  detector_ikonl_fs.py  detector_neo.py  fastshutter.py  fov_100x100.py  fov_190x190.py  fov_300x300.py  frr.py  nbl.py  nectar.py  notifiers.py  servostar.py  shutters.py  system.py  tcoll.py
nicos_demo/vnrs/: guiconfig.py
nicos_demo/vnrs/setups/: aperture.py  camera.py  focustable.py  sampletable.py  shutters.py  startup.py  system.py  tomography.py
nicos_demo/vpgaa/: guiconfig.py
nicos_demo/vpgaa/devices/: dspec.py  sampledevices.py
nicos_demo/vpgaa/setups/: collimation.py  detector.py  detector_neo.py  guidehall.py  nl4b.py  pgaa.py  pgai.py  pilz.py  pressure.py  samplechanger.py  sampletable.py  system.py  tomo.py
nicos_demo/vpuma/: guiconfig.py
nicos_demo/vpuma/setups/: aliases.py  analyzer.py  cad.py  defcal.py  detector.py  lengths.py  monochanger.py  monochromator.py  multianalysis.py  multianalyzer.py  multidetector.py  opticalbench.py  polarization.py  pollengths.py  pumabase.py  rdcad.py  sampletable.py  slits.py  startup.py  system.py  tas.py
nicos_demo/vsans1/: guiconfig.py
nicos_demo/vsans1/setups/: alias_T.py  alias_det1.py  attenuator.py  camera.py  ccmsanssc.py  chopper.py  chopper_phase.py  collimation.py  collimation_config.py  det1.py  detector.py  ea_psi.py  flipbox.py  frequency.py  ieee.py  instrument_shutter.py  julabo.py  manual.py  memograph.py  nl4a.py  notifiers.py  pilz.py  pressure.py  pressure_filter.py  pumpe-pi.py  reactor.py  resolution.py  rheometer.py  sample_changer.py  sample_table_1.py  sample_table_2.py  sans1.py  sans1_det.py  sc1.py  sc2.py  sc_t.py  selector020.py  selector042.py  selector_tower.py  slit.py  (+8 more)
nicos_demo/vspodi/: guiconfig.py
nicos_demo/vspodi/setups/: detector.py  filter.py  mono.py  nguide.py  samplechanger.py  sampletable.py  slits.py  spodi.py  system.py
nicos_demo/vtoftof/: guiconfig.py
nicos_demo/vtoftof/setups/: chopper.py  collimator.py  cryo.py  detector.py  guidehall.py  ng.py  nl2a.py  rc.py  reactor.py  slit.py  system.py  table.py  toftof.py  vacuum.py  voltage.py
nicos_ess/: __init__.py  guiconfig.py  guiconfig.qss  pyproject.toml  requirements.txt
nicos_ess/beer/: guiconfig.py  nicos.conf
nicos_ess/beer/devices/: slit_mapped_controller.py
nicos_ess/beer/setups/: accelerator_info.py  detector.py  kafka_readbacks.py  slit_set_1.py  startup.py  system.py  virtual_hexapod.py
nicos_ess/beer/testscripts/: basic.py
nicos_ess/bifrost/: guiconfig.py
nicos_ess/bifrost/nexus/: bifrost_basic.json
nicos_ess/bifrost/setups/: beam_monitor.py  beamlime.py  beryllium_filter.py  bwc_choppers.py  cryo_magnet.py  cryo_magnet_1.py  detector.py  detector_power_supplies.py  foc_choppers.py  foo_bar_pnp.py  just-bin-it.py  livedata.py  motion_cabinet_1.py  motion_cabinet_2.py  motion_cabinet_3.py  psc_choppers.py  pumping_cart_205.py  readout_master.py  sample_slits.py  system.py  vacuum.py
nicos_ess/bifrost/testscripts/: advanced.py  basic.py
nicos_ess/coda/: guiconfig.py  nicos.conf
nicos_ess/coda/setups/: forwarder.py  system.py  (+3 more)
nicos_ess/commands/: __init__.py  base.py  default_setup.py  ess_scan.py  filewriter.py  sample.py  scichat.py  wait.py
nicos_ess/cspec/: guiconfig.py
nicos_ess/devices/: cache_kafka_forwarder.py  carbon_forwarder.py  datamanager.py  efu_status.py  experiment.py  forwarder.py  julabo_magio_ms_1000.py  mapped_controller.py  metrics_forwarder.py  mixins.py  pnp_listener.py  sample.py  scichat.py  sequencers.py  timer.py  transformer_device.py  transformer_devices.py
nicos_ess/dream/: guiconfig.py  nicos.conf
nicos_ess/estia/: guiconfig.py
nicos_ess/freia/: guiconfig.py  nicos.conf
nicos_ess/gui/: guiconfig.qss  guiconfig_6.qss  lkm_sample_panel_gui_dev.py  main.py  main.ui  mainwindow.py  statusbar.py  utils.py
nicos_ess/loki/: guiconfig.py  guiconfig.qss
nicos_ess/magic/: guiconfig.py  nicos.conf
nicos_ess/miracles/: guiconfig.py
nicos_ess/nexus/: __init__.py  converter.py  elements.py  nexus_config.py  placeholder.py
nicos_ess/nido/: guiconfig.py
nicos_ess/nmx/: guiconfig.py  nicos.conf
nicos_ess/odin/: guiconfig.py
nicos_ess/tbl/: guiconfig.py  nicos.conf
nicos_ess/telemetry/: README.md  __init__.py  carbon.py  config.py  handlers.py  metrics.py  sender.py
nicos_ess/utilities/: csv_utils.py  json_utils.py  managers.py  table_utils.py
nicos_ess/ymir/: guiconfig.py
resources/: pyproject.toml
(+3678 files in other folders)
