[project]
name = "nicos"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "urllib3==1.26.20",
    "caproto",
    "confluent-kafka==2.4.0",
    "ess-streaming-data-types>=0.26.1",
    "flake8>=5.0.0",
    "html2text>=3.200.3",
    "h5py>=2.6",
    "kafka-logging-handler<=0.2.4",
    "keyring==24.3.0",
    "keyrings.alt==5.0.0",
    "ldap3>=2.0.0",
    "lttb>=0.2.2",
    "nicos-pyctl @ https://forge.frm2.tum.de/packages/nicos-pyctl-1.3.tar.gz#sha256=c171f8bbc4d89fa317c7e80ccf3382e1e02288edefe6bbec50ac6ae1441f2d48",
    "numpy>=1.10.0",
    "p4p>=4.0.0",
    "psutil>=2.0",
    "pycryptodomex>=3.4.7",
    "pyqtgraph>=0.12.4",
    "pyzmq>=13.1.0",
    "rsa>=3.1.2",
    "scipy>=0.9.0",
    "toml>=0.10",
    "redis==5.0.4",
    "GitPython",
    "yuos_query @ https://github.com/ess-dmsc/yuos_query/releases/download/v0.1.22/yuos_query-0.1.22-py3-none-any.whl",
    "gr @ https://forge.frm2.tum.de/packages/gr-1.18.0-py3-none-any.whl#sha256=dcfc7405ee154115701850a8d92052e2c7b728270065c6459549cf10beac64fd",
]

[tool.setuptools]
packages = ["nicos", "nicos_demo", "nicos_ess"]

[tool.ruff]
exclude = [
    "nicos_mlz/",
    "nicos_sinq/",
    "test/",
    "nicos_demo/",
    "nicostools/",
    "doc/",
    "data/",
    "tools/",
    "bin/",
]

# Configure globally applicable rules
select = ["E", "F", "W"]

# Per-file ignores
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/guiconfig.py" = [
    "F821"  # Undefined name
]
"**/setups/**/*.py" = [
    "F821"  # Undefined name
]
"**/testscripts/**/*.py" = [
    "F821"  # Undefined name
]
"nicos/**/*.py" = [
    "F821", # Undefined name
    "F401", # Module imported but unused
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "E731", # Do not assign a lambda expression, use a def
    "F841", # Local variable is assigned to but never used
    "F405"  # Name may be undefined, or defined from star imports
]

[tool.ruff-format]
exclude = [
    "nicos_mlz/",
    "nicos_sinq/",
    "test/",
    "nicos_demo/",
    "nicostools/",
    "doc/",
    "data/",
    "tools/",
]

[tool.ruff-format.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/guiconfig.py" = [
    "F821"  # Undefined name
]
"**/setups/**/*.py" = [
    "F821"  # Undefined name
]
"**/testscripts/**/*.py" = [
    "F821"  # Undefined name
]
"nicos/**/*.py" = [
    "F821", # Undefined name
    "F401", # Module imported but unused
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "E731", # Do not assign a lambda expression, use a def
    "F841", # Local variable is assigned to but never used
    "F405"  # Name may be undefined, or defined from star imports
]
