[project]
name = "NICOS"
description = "Networked Instrument COntrol System"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "caproto>=1.3.0",
    "confluent-kafka==2.4.0",
    "ess-streaming-data-types>=0.27.0",
    "gitpython>=3.1.45",
    "h5py>=2.6",
    "html2text>=3.200.3",
    "kafka-logging-handler<=0.2.4",
    "keyring==24.3.0",
    "keyrings-alt==5.0.0",
    "ldap3>=2.0.0",
    "lttb>=0.2.2",
    "nicos-pyctl>=1.0",
    "numpy>=1.10.0",
    "p4p>=4.0.0",
    "psutil>=2.0",
    "pycryptodomex>=3.4.7",
    "pyqtgraph>=0.12.4",
    "pyzmq>=13.1.0",
    "redis==5.0.4",
    "rsa>=3.1.2",
    "scipy>=0.9.0",
    "toml>=0.10",
    "urllib3==1.26.20",
    "yuos-query",
    "platformdirs",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning", "uv_build>=0.9.18,<0.10.0"]
build-backend = "hatchling.build"  # uv does not yet support dynamic metadata

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
only-include = ["nicos"]

[tool.hatch.build.targets.wheel]
packages = ["nicos"]

[tool.hatch.build.targets.sdist.force-include]
# include files outside the main package and rewrite their path
"bin" = "nicos/scripts"  # starter scripts
"resources" = "nicos/resources"

[project.scripts]
# the daemon can be called via a main function defined in the module:
nicos-daemon = "nicos.services.daemon.session:main"
# alternatively, one can call the old NICOS scripts via a helper tool that calls
# the script corresponding to the name of the entry point
nicos-cache = "nicos.scripts.start_helper:main"
nicos-poller = "nicos.scripts.start_helper:main"
nicos-collector = "nicos.scripts.start_helper:main"

[project.optional-dependencies]
gui = [
    "gr>=1.23.2",
    "html2text>=2025.4.15",
    "keyring==24.3.0",
    "keyrings-alt==5.0.0",
    "lttb>=0.3.2",
    "matplotlib>=3.9.4",
    "pycryptodomex>=3.4.7",
    "pyqt5>=5.13.0 ; sys_platform == 'linux'",
    "pyqt5>=5.15.6 ; sys_platform == 'win32'",
    "pyqt6==6.6.1 ; sys_platform == 'darwin'",
    "pyqt6-qscintilla>=2.13 ; sys_platform == 'darwin'",
    "pyqt6-qt6==6.6.2 ; sys_platform == 'darwin'",
    "pyqt6-webengine==6.6.0 ; sys_platform == 'darwin'",
    "pyqt6-webengine-qt6==6.6.0 ; sys_platform == 'darwin'",
    "pyqtgraph>=0.12.4",
    "pyqtwebengine>=5.13.0 ; sys_platform == 'linux'",
    "pyqtwebengine>=5.15.5 ; sys_platform == 'win32'",
    "python-redmine>=2.0.0",
    "qscintilla==2.13.4 ; sys_platform == 'linux'",
    "qscintilla>=2.12 ; sys_platform == 'win32'",
    "rsa>=4.9.1",
    "scipy>=1.13.1",
    "toml>=0.10.2",
    "urllib3==1.26.20",
]

[tool.ruff]
exclude = [
    "nicos_mlz/",
    "nicos_sinq/",
    "test/",
    "nicos_demo/",
    "nicostools/",
    "doc/",
    "data/",
    "tools/",
    "bin/",
]

# Configure globally applicable rules
select = ["E", "F", "W"]

# Per-file ignores
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/guiconfig.py" = [
    "F821"  # Undefined name
]
"**/setups/**/*.py" = [
    "F821"  # Undefined name
]
"**/testscripts/**/*.py" = [
    "F821"  # Undefined name
]
"nicos/**/*.py" = [
    "F821", # Undefined name
    "F401", # Module imported but unused
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "E731", # Do not assign a lambda expression, use a def
    "F841", # Local variable is assigned to but never used
    "F405"  # Name may be undefined, or defined from star imports
]

[tool.ruff-format]
exclude = [
    "nicos_mlz/",
    "nicos_sinq/",
    "test/",
    "nicos_demo/",
    "nicostools/",
    "doc/",
    "data/",
    "tools/",
]

[tool.ruff-format.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/guiconfig.py" = [
    "F821"  # Undefined name
]
"**/setups/**/*.py" = [
    "F821"  # Undefined name
]
"**/testscripts/**/*.py" = [
    "F821"  # Undefined name
]
"nicos/**/*.py" = [
    "F821", # Undefined name
    "F401", # Module imported but unused
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "E731", # Do not assign a lambda expression, use a def
    "F841", # Local variable is assigned to but never used
    "F405"  # Name may be undefined, or defined from star imports
]

[tool.uv.sources]
yuos-query = { url = "https://github.com/ess-dmsc/yuos_query/releases/download/v0.1.22/yuos_query-0.1.22-py3-none-any.whl" }

[dependency-groups]
dev = [
    "caproto>=1.3.0",
    "confluent-kafka==2.4.0",
    "ess-streaming-data-types>=0.26.1",
    "flake8>=5.0.0",
    "gitpython>=3.1.45",
    "gr>=1.23.2",
    "h5py>=2.6",
    "html2text>=3.200.3",
    "kafka-logging-handler<=0.2.4",
    "keyring==24.3.0",
    "keyrings-alt==5.0.0",
    "ldap3>=2.0.0",
    "lttb>=0.2.2",
    "matplotlib>=3.9.4",
    "memory-profiler>=0.61.0",
    "mock>=1.0",
    "nicos-pyctl>=1.0",
    "numpy>=1.10.0",
    "p4p>=4.0.0",
    "pre-commit>=4.3.0",
    "psutil>=2.0",
    "pycryptodomex>=3.4.7",
    "pylint>=2.1.0",
    "pyqt5>=5.13.0 ; sys_platform == 'linux'",
    "pyqt5>=5.15.6 ; sys_platform == 'win32'",
    "pyqt6==6.6.1 ; sys_platform == 'darwin'",
    "pyqt6-qscintilla>=2.13 ; sys_platform == 'darwin'",
    "pyqt6-qt6==6.6.2 ; sys_platform == 'darwin'",
    "pyqt6-webengine==6.6.0 ; sys_platform == 'darwin'",
    "pyqt6-webengine-qt6==6.6.0 ; sys_platform == 'darwin'",
    "pyqtgraph>=0.12.4",
    "pyqtwebengine>=5.13.0 ; sys_platform == 'linux'",
    "pyqtwebengine>=5.15.5 ; sys_platform == 'win32'",
    "pytest>=4.6",
    "pytest-cov>=2.2",
    "pytest-randomly>=1.1",
    "pytest-timeout>=1.3.1",
    "python-redmine>=2.0.0",
    "pyyaml>=3.0",
    "pyzmq>=13.1.0",
    "qscintilla==2.13.4 ; sys_platform == 'linux'",
    "qscintilla>=2.12 ; sys_platform == 'win32'",
    "redis==5.0.4",
    "rsa>=3.1.2",
    "ruff==0.9.2",
    "scipy>=0.9.0",
    "toml>=0.10",
    "urllib3==1.26.20",
    "yuos-query",
]
