[project]
name = "nicos"
description = "Networked Instrument COntrol System"
requires-python = ">=3.9"
# version = "1.2.3"
dynamic = ["version"]  # determine the version from git tags
dependencies = [
    "caproto>=1.3.0",
    "ess-streaming-data-types>=0.27.0",
    "gitpython>=3.1.45",
    "h5py>=2.6",
    "html2text>=3.200.3",
    "kafka-logging-handler<=0.2.4",
    "keyring==24.3.0",
    "keyrings-alt==5.0.0",
    "ldap3>=2.0.0",
    "lttbc",
    "nicos-pyctl>=1.0",
    "numpy>1.26.0",
    "p4p>=4.0.0",
    "psutil>=2.0",
    "pycryptodomex>=3.4.7",
    "pyqtgraph>=0.12.4",
    "pyzmq>=13.1.0",
    "redis==5.0.4",
    "rsa>=3.1.2",
    "scipy>=0.9.0",
    "toml>=0.10",
    "urllib3==1.26.20",
    "platformdirs",
    "nicos-resources",  # package is part of this workspace
    "importlib_metadata>=4.6;python_version<'3.10' and python_version>='3.6'",  # 3.10 brings recent-enough importlib.metadata
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning", "uv_build>=0.9.18,<0.10.0"]
build-backend = "hatchling.build"  # uv does not yet support dynamic metadata

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
only-include = ["nicos"]

# Configure wheel options. See https://hatch.pypa.io/latest/plugins/builder/wheel/#options
[tool.hatch.build.targets.wheel]
packages = ["nicos"]

# to install into the top level of the venv:
# could be used to load via `sys.prefix` + path
#[tool.hatch.build.targets.wheel.shared-data]
#"resources" = "resources"


[tool.hatch.build.targets.wheel.shared-scripts]
"bin/" = "."

[tool.hatch.build.targets.sdist.force-include]
# include files outside the main package and rewrite their path
"bin" = "bin"  # starter scripts
# "resources" = "resources"

# # Using `uv` backend works for nicos core. However, it does not (yet) allow
# # dynamic versioning, i.e. setting the version number based on git tags.
# [build-system]
# requires = ["uv_build>=0.9.26,<0.10.0"]
# build-backend = "uv_build"

# # Backend configuration
# [tool.uv.build-backend]
# module-name = "nicos"
# # nicos core is located at the root of the repository:
# module-root = ""
# # Install extra includes for the wheel:
# # 
# # - data: Installed over the virtualenv environment root. Warning: This may
# #   override existing files!
# #   
# # - scripts: Installed to the directory for executables. Consider using
# #   `project.scripts` instead for Python entrypoints.
# #
# # - purelib and platlib: Installed to the site-packages directory. It is not
# #   recommended to use these two options.
# data = { platlib = "resources", scripts = "bin" }

[tool.uv.sources]
nicos_ess = { workspace = true }
nicos-resources = { workspace = true }

[tool.uv.workspace]
members = ["nicos_ess", "nicos_demo", "resources"]
# members = ["nicos_*"]
# exclude = ["packages/some_package"]

[project.optional-dependencies]
gui = [
    "gr>=1.23.2",
    "html2text>=2025.4.15",
    "keyring==24.3.0",
    "keyrings-alt==5.0.0",
    "lttb>=0.3.2",
    "matplotlib>=3.9.4",
    "pycryptodomex>=3.4.7",
    "pyqt5>=5.13.0 ; sys_platform == 'linux'",
    "pyqt5>=5.15.6 ; sys_platform == 'win32'",
    "pyqt6==6.6.1 ; sys_platform == 'darwin'",
    "pyqt6-qscintilla>=2.13 ; sys_platform == 'darwin'",
    "pyqt6-qt6==6.6.2 ; sys_platform == 'darwin'",
    "pyqt6-webengine==6.6.0 ; sys_platform == 'darwin'",
    "pyqt6-webengine-qt6==6.6.0 ; sys_platform == 'darwin'",
    "pyqtgraph>=0.12.4",
    "pyqtwebengine>=5.13.0 ; sys_platform == 'linux'",
    "pyqtwebengine>=5.15.5 ; sys_platform == 'win32'",
    "python-redmine>=2.0.0",
    "qscintilla==2.13.4 ; sys_platform == 'linux'",
    "qscintilla>=2.12 ; sys_platform == 'win32'",
    "toml>=0.10.2",
    "urllib3==1.26.20",
]

[dependency-groups]
dev = [
    "flake8>=5.0.0",
    "gitpython>=3.1.45",
    "memory-profiler>=0.61.0",
    "mock>=1.0",
    "pre-commit>=4.3.0",
    "pylint>=2.1.0",
    "pytest>=4.6",
    "pytest-cov>=2.2",
    "pytest-randomly>=1.1",
    "pytest-timeout>=1.3.1",
    "python-redmine>=2.0.0",
    "pyyaml>=3.0",
    "ruff==0.9.2",
]

[tool.ruff]
exclude = [
    "nicos_mlz/",
    "nicos_sinq/",
    "test/",
    "nicos_demo/",
    "nicostools/",
    "doc/",
    "data/",
    "tools/",
    "bin/",
]

# Configure globally applicable rules
lint.select = ["E", "F", "W"]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/guiconfig.py" = [
    "F821"  # Undefined name
]
"**/setups/**/*.py" = [
    "F821"  # Undefined name
]
"**/testscripts/**/*.py" = [
    "F821"  # Undefined name
]
"nicos/**/*.py" = [
    "F821", # Undefined name
    "F401", # Module imported but unused
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "E731", # Do not assign a lambda expression, use a def
    "F841", # Local variable is assigned to but never used
    "F405"  # Name may be undefined, or defined from star imports
]

[tool.ruff-format]
exclude = [
    "nicos_mlz/",
    "nicos_sinq/",
    "test/",
    "nicos_demo/",
    "nicostools/",
    "doc/",
    "data/",
    "tools/",
]

[tool.ruff-format.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/__init__.py" = [
    "F401", # Module imported but unused
    "F403"  # 'from module import *' used; unable to detect undefined names
]
"*/guiconfig.py" = [
    "F821"  # Undefined name
]
"**/setups/**/*.py" = [
    "F821"  # Undefined name
]
"**/testscripts/**/*.py" = [
    "F821"  # Undefined name
]
"nicos/**/*.py" = [
    "F821", # Undefined name
    "F401", # Module imported but unused
    "E402", # Module level import not at top of file
    "F403", # 'from module import *' used; unable to detect undefined names
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "E731", # Do not assign a lambda expression, use a def
    "F841", # Local variable is assigned to but never used
    "F405"  # Name may be undefined, or defined from star imports
]

[[tool.uv.index]]
name = "ecdc-pypi"
url = "https://artifactory.esss.lu.se/artifactory/api/pypi/ecdc-pypi/simple"
publish-url = "https://artifactory.esss.lu.se/artifactory/api/pypi/ecdc-pypi"
default = true
