[project]
name = "nicos_ess"
version = "4.5.6"
description = "NICOS Customizations and Extensions for the European Spallation Source (ESS)"
requires-python = ">=3.9"
# dynamic = ["version"]
dependencies = [
    "confluent-kafka==2.4.0",
    "ess-streaming-data-types>=0.26.1",
    "kafka-logging-handler<=0.2.4",
    "nicos",
]

[project.optional-dependencies]
gui = [
    "nicos[gui]"
]

[dependency-groups]
dev = [
    "nicos[dev]"
]

[tool.uv.sources]
# `nicos_ess` depends on `nicos`, which should be installed from this workspace:
nicos = { workspace = true }

# Define an entry point that allows to register this module as NICOS plugin.
[project.entry-points."nicos.plugins"]
ESS = "nicos_ess"

[project.scripts]
# Define package's entry points for command-line interfaces. Requires a function
# to call which will be wrapped into a script.
# 
# nicos-gui = "nicos_ess.gui.main:main"

# Use the `hatchling` backend for building the package. `uv` backend does not
# work without a `src/module_name` or `module_name` subdirectory.
[build-system]
requires = ["hatchling", "uv-dynamic-versioning", "uv_build>=0.9.18,<0.10.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist.force-include]
# Explicitly include files at module root and rewrite their path
"." = "nicos_ess"

[tool.hatch.build.targets.wheel]
packages = ["nicos_ess"]

