[project]
name = "nicos_ess"
description = "NICOS Customizations and Extensions for the European Spallation Source (ESS)"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "confluent-kafka>=2.13.0",
    "ess-streaming-data-types>=0.26.1",
    "kafka-logging-handler<=0.2.4",
    "nicos",
]

[project.optional-dependencies]
gui = [
    "nicos[gui]"
]

[dependency-groups]
dev = [
    "nicos[dev]"
]

[tool.uv.sources]
# `nicos_ess` depends on `nicos`, which should be installed from this workspace:
nicos = { workspace = true }

# Define an entry point that allows to register this module as NICOS plugin.
[project.entry-points."nicos.plugins"]
ESS = "nicos_ess"

[project.scripts]
# Define package's entry points for command-line interfaces. Requires a function
# to call which will be wrapped into a script.
# 
# nicos-gui = "nicos_ess.gui.main:main"

# Use the `hatchling` backend for building the package. `uv` backend does not
# work without a `src/module_name` or `module_name` subdirectory.
[build-system]
requires = ["hatchling", "uv-dynamic-versioning", "uv_build>=0.9.18,<0.10.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.sources]
# Rewrite the path of included directories and root-level files to create a path
# leading with the module's name. This results in the directory layout the wheel
# format expects.
"beer" = "nicos_ess/beer"
"bifrost" = "nicos_ess/bifrost"
"coda" = "nicos_ess/coda"
"commands" = "nicos_ess/commands"
"cspec" = "nicos_ess/cspec"
"devices" = "nicos_ess/devices"
"dream" = "nicos_ess/dream"
"estia" = "nicos_ess/estia"
"freia" = "nicos_ess/freia"
"gui" = "nicos_ess/gui"
"labs" = "nicos_ess/labs"
"loki" = "nicos_ess/loki"
"miracles" = "nicos_ess/miracles"
"nexus" = "nicos_ess/nexus"
"nido" = "nicos_ess/nido"
"nmx" = "nicos_ess/nmx"
"odin" = "nicos_ess/odin"
"tbl" = "nicos_ess/tbl"
"utilities" = "nicos_ess/utilities"
"ymir" = "nicos_ess/ymir"

[tool.hatch.build.targets.sdist.force-include]
"guiconfig.py" = "nicos_ess/guiconfig.py"
"__init__.py" = "nicos_ess/__init__.py"


# [tool.hatch.build.targets.sdist.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["nicos_ess"]

[tool.hatch.version]
source = "uv-dynamic-versioning"
