[project]
name = "nicos-resources"
dynamic = ["version"]
description = "NICOS Resource Package"

# Use the `hatchling` backend for building the package. `uv` backend does not
# work without a `src/module_name` or `module_name` subdirectory.
[build-system]
requires = ["hatchling", "uv-dynamic-versioning", "uv_build>=0.9.18,<0.10.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.force-include]
# Explicitly include files at module root and rewrite their path
"." = "resources"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
source = "uv-dynamic-versioning"
